--- a/app/src/main/res/layout/activity_student_card.xml
+++ b/app/src/main/res/layout/activity_student_card.xml
@@ -1,134 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".StudentCard"
-    android:background="@color/white">
+    android:background="#FF6C8C"
+    >
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="200dp"
+        android:layout_height="221dp"
+        android:layout_rowWeight="1"
+        android:layout_columnWeight="1"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="6dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toTopOf="@+id/cardView1"
+        app:cardBackgroundColor="#EEA79A">
 
 
-   <RelativeLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
-       <androidx.cardview.widget.CardView
-           android:id="@+id/cardView"
-           android:layout_width="405dp"
-           android:layout_height="221dp"
-           android:layout_rowWeight="1"
-           android:layout_columnWeight="1"
-           android:layout_margin="12dp"
-           app:cardCornerRadius="12dp"
-           app:cardElevation="6dp"
-           app:layout_constraintBottom_toBottomOf="parent"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toTopOf="parent"
-           app:layout_constraintVertical_bias="0.049">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-           <RelativeLayout
-               android:layout_width="match_parent"
-               android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/scanEntryTxt"
+                android:layout_width="152dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="21dp"
+                android:layout_marginBottom="125dp"
+                android:text="Mark Entry/Exit by scanning QR Code"
+                android:textAlignment="center"
+                android:textStyle="bold|italic" />
 
-               <TextView
-                   android:id="@+id/manualENtryTxt"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_alignParentEnd="true"
-                   android:layout_alignParentBottom="true"
-                   android:layout_marginEnd="238dp"
-                   android:layout_marginBottom="172dp"
-                   android:text="Mark Entry/Exit manually"
-                   android:textStyle="bold|italic"
-                   android:textAlignment="center"/>
-
-               <EditText
-                   android:id="@+id/userNameEdtTxt"
-                   android:layout_width="170dp"
-                   android:layout_height="wrap_content"
-                   android:layout_alignParentTop="true"
-                   android:layout_alignParentEnd="true"
-                   android:layout_marginTop="61dp"
-                   android:layout_marginEnd="187dp"
-                   android:hint="user_name" />
-
-               <EditText
-                   android:id="@+id/exitEntryEdtTxt"
-                   android:layout_width="129dp"
-                   android:layout_height="38dp"
-                   android:layout_alignParentEnd="true"
-                   android:layout_alignParentBottom="true"
-                   android:layout_marginTop="4dp"
-                   android:layout_marginEnd="228dp"
-                   android:layout_marginBottom="77dp"
-                   android:hint="exit/entry"
-                   android:minHeight="48dp" />
-
-               <Button
-                   android:id="@+id/markBtn"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_alignParentEnd="true"
-                   android:layout_alignParentBottom="true"
-                   android:layout_marginEnd="262dp"
-                   android:layout_marginBottom="13dp"
-                   android:text="MARK" />
-
-               <TextView
-                   android:id="@+id/scanEntryTxt"
-                   android:layout_width="152dp"
-                   android:layout_height="wrap_content"
-                   android:layout_alignParentEnd="true"
-                   android:layout_alignParentBottom="true"
-                   android:layout_marginEnd="6dp"
-                   android:layout_marginBottom="153dp"
-                   android:text="Mark Entry/Exit by scanning QR Code"
-                   android:textAlignment="center"
-                   android:textStyle="bold|italic" />
-
-               <Button
-                   android:id="@+id/scanBtn"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_alignParentEnd="true"
-                   android:layout_alignParentBottom="true"
-                   android:layout_marginEnd="39dp"
-                   android:layout_marginBottom="73dp"
-                   android:text="scan" />
+            <Button
+                android:id="@+id/scanBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="54dp"
+                android:layout_marginBottom="49dp"
+                android:text="scan" />
 
 
-           </RelativeLayout>
+        </RelativeLayout>
 
-       </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-       <Button
-           android:id="@+id/refreshBtn"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_alignParentBottom="true"
-           android:layout_marginBottom="452dp"
-           android:text="REFRESH"
-           app:layout_constraintBottom_toBottomOf="parent"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintHorizontal_bias="0.0"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toTopOf="parent"
-           app:layout_constraintVertical_bias="0.399" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView1"
+        android:layout_width="350dp"
+        android:layout_height="221dp"
+        android:layout_rowWeight="1"
+        android:layout_columnWeight="1"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="6dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="27dp"
+        app:cardBackgroundColor="#EEA79A">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="321dp">
+
+            <TextView
+                android:id="@+id/manualENtryTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="95dp"
+                android:layout_marginBottom="172dp"
+                android:text="Mark Entry/Exit manually"
+                android:textAlignment="center"
+                android:textStyle="bold|italic" />
+
+            <EditText
+                android:id="@+id/userNameEdtTxt"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="61dp"
+                android:layout_marginEnd="93dp"
+                android:hint="user_name"
+                android:minHeight="48dp" />
+
+            <EditText
+                android:id="@+id/exitEntryEdtTxt"
+                android:layout_width="129dp"
+                android:layout_height="48dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="131dp"
+                android:layout_marginBottom="63dp"
+                android:hint="exit/entry"
+                android:minHeight="48dp" />
+
+            <Button
+                android:id="@+id/markBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="143dp"
+                android:layout_marginBottom="10dp"
+                android:text="MARK" />
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 
 
-       <de.codecrafters.tableview.TableView
-           android:id="@+id/studentLogs"
-           android:layout_width="wrap_content"
-           android:layout_height="match_parent"
-           android:layout_marginTop="280dp"
-           app:layout_constraintBottom_toBottomOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toTopOf="parent"
-           app:tableView_columnCount="4" />
+    <Button
+        android:id="@+id/refreshBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="GET ALL STUDENT LOGS"
+        android:layout_marginLeft="95dp"
+        android:layout_marginTop="20dp"/>
 
 
+    <!--       <de.codecrafters.tableview.TableView-->
+    <!--           android:id="@+id/studentLogs"-->
+    <!--           android:layout_width="wrap_content"-->
+    <!--           android:layout_height="match_parent"-->
+    <!--           android:layout_marginTop="280dp"-->
+    <!--           app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--           app:layout_constraintStart_toStartOf="parent"-->
+    <!--           app:layout_constraintTop_toTopOf="parent"-->
+    <!--           app:tableView_columnCount="4" />-->
 
-   </RelativeLayout>
+<!--    FF6C8C-->
+<!--    FA2727-->
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
