--- a/app/src/main/res/layout/activity_student_card.xml
+++ b/app/src/main/res/layout/activity_student_card.xml
@@ -85,6 +85,7 @@
                 android:textAlignment="center"
                 android:textStyle="bold|italic" />
 
+
             <EditText
                 android:id="@+id/userNameEdtTxt"
                 android:layout_width="170dp"
@@ -94,19 +95,43 @@
                 android:layout_marginTop="61dp"
                 android:layout_marginEnd="93dp"
                 android:hint="user_name"
-                android:minHeight="48dp" />
+                android:minHeight="48dp"
+                android:textAlignment="center"/>
 
-            <EditText
-                android:id="@+id/exitEntryEdtTxt"
-                android:layout_width="129dp"
-                android:layout_height="48dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="131dp"
-                android:layout_marginBottom="63dp"
-                android:hint="exit/entry"
-                android:minHeight="48dp" />
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="66dp"
+                android:layout_marginLeft="140dp"
+                android:layout_marginTop="100dp"
+                android:id="@+id/radioGroup">
+
+                <RadioButton
+                    android:id="@+id/Entry"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="onRadioButtonClicked"
+                    android:text="Entry"
+                    android:checked="true"/>
+
+                <RadioButton
+                    android:id="@+id/Exit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="onRadioButtonClicked"
+                    android:text="Exit" />
+            </RadioGroup>
+
+<!--            <EditText-->
+<!--                android:id="@+id/exitEntryEdtTxt"-->
+<!--                android:layout_width="129dp"-->
+<!--                android:layout_height="48dp"-->
+<!--                android:layout_alignParentEnd="true"-->
+<!--                android:layout_alignParentBottom="true"-->
+<!--                android:layout_marginTop="4dp"-->
+<!--                android:layout_marginEnd="131dp"-->
+<!--                android:layout_marginBottom="63dp"-->
+<!--                android:hint="exit/entry"-->
+<!--                android:minHeight="48dp" />-->
 
             <Button
                 android:id="@+id/markBtn"
@@ -114,8 +139,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginEnd="143dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="129dp"
+                android:layout_marginBottom="4dp"
                 android:text="MARK" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
@@ -129,6 +154,7 @@
         android:text="GET ALL STUDENT LOGS"
         android:layout_marginLeft="95dp"
         android:layout_marginTop="20dp"/>
+
 
 
     <!--       <de.codecrafters.tableview.TableView-->
